[package]
name = "pycrust"
version = "0.1.0"
edition = "2024"
description = "A sandboxed python interpreter (and soon to be compiler)"
license = "MIT"
readme = "README.md"

[features]
default = ["lexer", "parser", "interpreter"]
lexer = []
parser = ["lexer"]
interpreter = ["lexer", "parser"]
compiler = ["lexer", "parser"]
serial = ["dep:serde", "dep:serde_json"]


[dependencies]
anyhow = "1.0.100"

serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
