[package]
name = "pycrust"
version = "0.1.0"
edition = "2024"
description = "A sandboxed python interpreter (and soon to be compiler)"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["lexer", "parser", "interpreter"]
lexer = ["dep:regex", "dep:num-bigint"]
parser = ["lexer"]
interpreter = ["lexer", "parser", "dep:slotmap", "dep:indexmap"]
compiler = ["lexer", "parser"]
serial = ["dep:serde", "dep:serde_json", "num-bigint/serde"]
named-unicode = ["dep:unicode_names2"]


[dependencies]
node_macro = { path = "node_macro" }

anyhow = "1.0.100"

indexmap = { version = "2.13.0", optional = true }
slotmap = { version = "1.1.1", optional = true }
num-bigint = { version = "0.4.6", optional = true }

regex = { version = "1.12.2", optional = true }

serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }

unicode_names2 = { version = "2.0.0", optional = true }
hashbrown = "0.16.1"
bitflags = "2.10.0"
num-traits = "0.2.19"
